--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -2,6 +2,11 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  color: #fff;
 }
 .logo {
   font-size: 2rem;
