--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css');
+
 .App {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h1 {
-  margin: 0;
+h1,
+h2,
+h3 {
+  margin-top: 0;
 }
 
 body {
@@ -11,7 +15,7 @@ body {
 }
 
 .container {
-  max-width: 1200px;
+  max-width: 1000px;
   margin: 0 auto;
 }
 
