--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,19 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+.btn {
+  background-color: transparent;
+  border: none;
+  border: 1px solid white;
+  border-radius: 4px;
+  padding: 12px 24px;
+  font-size: 1.2rem;
+}
+.btn:hover {
+  background-color: rgba(221, 221, 221, 0.171);
+}
+.btn.btn-sm {
+  padding: 8px 16px;
+  font-size: 1rem;
+}
